[package]
name = "pallet-sminer"
authors = ["CESS LAB"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"
repository = ""
description = "FRAME pallet for sminer management"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
scale-info = { default-features = false, features = ['derive'], version = "1.0" }

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-10'
version = '4.0.0-dev'
optional = true

[dependencies.cess-frame-support]
default-features = false
path = "../../frame/support"
version = '4.0.0-dev'

[dependencies.cess-frame-system]
default-features = false
path = "../../frame/system"
version = '4.0.0-dev'

[dependencies.cessp-io]
default-features = false
path = "../../primitives/io"
version = '4.0.0-dev'

[dependencies.cessp-std]
default-features = false
path = "../../primitives/std"
version = '4.0.0-dev'

[dependencies.pallet-balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-10'
version = '4.0.0-dev'

[dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-10'
version = '4.0.0-dev'

[dependencies.cessp-core]
default-features = false
path = "../../primitives/core"
version = '4.0.0-dev'

[dependencies.cessp-runtime]
default-features = false
path = "../../primitives/runtime"
version = '4.0.0-dev'

[dependencies.pallet-scheduler]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-10'
version = '4.0.0-dev'

[features]
default = ["std"]
std = [
	"codec/std",
	"cess-frame-support/std",
	"cess-frame-system/std",
	"scale-info/std",
	"serde",
	"cessp-io/std",
	"cessp-runtime/std",
	"cessp-std/std",
	"pallet-timestamp/std",
	"frame-benchmarking/std",
]
runtime-benchmarks = ["frame-benchmarking"] 
