[package]
name = "pallet-cess-staking"
version = "4.0.0-dev"
authors = ["CESS LAB"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://www.cess.cloud"
repository = "https://github.com/CESSProject/cess/"
description = "FRAME pallet cess staking"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.136", optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
sp-std = { version = "4.0.0", default-features = false, git = "https://github.com/CESSProject/substrate", branch = "yeou-dev" }
sp-io = { version = "6.0.0", default-features = false, git = "https://github.com/CESSProject/substrate", branch = "yeou-dev" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/CESSProject/substrate", branch = "yeou-dev" }
sp-staking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate", branch = "yeou-dev" }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate", branch = "yeou-dev" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate", branch = "yeou-dev" }
pallet-session = { version = "4.0.0-dev", default-features = false, features = [
	"historical",
], git = "https://github.com/CESSProject/substrate", branch = "yeou-dev" }
pallet-authorship = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate", branch = "yeou-dev" }
sp-application-crypto = { version = "6.0.0", default-features = false, git = "https://github.com/CESSProject/substrate", branch = "yeou-dev" }
frame-election-provider-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate", branch = "yeou-dev" }
log = { version = "0.4.14", default-features = false }

# Optional imports for benchmarking
frame-benchmarking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate", branch = "yeou-dev", optional = true }
rand_chacha = { version = "0.2", default-features = false, optional = true }

[dev-dependencies]
sp-tracing = { version = "5.0.0", git = "https://github.com/CESSProject/substrate", branch = "yeou-dev" }
sp-core = { version = "6.0.0", git = "https://github.com/CESSProject/substrate", branch = "yeou-dev" }
sp-npos-elections = { version = "4.0.0-dev", git = "https://github.com/CESSProject/substrate", branch = "yeou-dev" }
pallet-balances = { version = "4.0.0-dev", git = "https://github.com/CESSProject/substrate", branch = "yeou-dev" }
pallet-timestamp = { version = "4.0.0-dev", git = "https://github.com/CESSProject/substrate", branch = "yeou-dev" }
pallet-staking-reward-curve = { version = "4.0.0-dev", git = "https://github.com/CESSProject/substrate", branch = "yeou-dev" }
pallet-bags-list = { version = "4.0.0-dev", features = ["runtime-benchmarks"], git = "https://github.com/CESSProject/substrate", branch = "yeou-dev" }
substrate-test-utils = { version = "4.0.0-dev", git = "https://github.com/CESSProject/substrate", branch = "yeou-dev" }
frame-benchmarking = { version = "4.0.0-dev", git = "https://github.com/CESSProject/substrate", branch = "yeou-dev" }
frame-election-provider-support = { version = "4.0.0-dev", git = "https://github.com/CESSProject/substrate", branch = "yeou-dev" }
rand_chacha = { version = "0.2" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-session/std",
	"frame-system/std",
	"pallet-authorship/std",
	"sp-application-crypto/std",
	"log/std",
	"frame-election-provider-support/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-election-provider-support/runtime-benchmarks",
	"rand_chacha",
]
try-runtime = ["frame-support/try-runtime"]
