[package]
name = "pallet-cess-bounties"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet to manage bounties"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
cessp-std = { version = "4.0.0-dev", default-features = false, path = "../../primitives/std" }
cessp-runtime = { version = "4.0.0-dev", default-features = false, path = "../../primitives/runtime" }
cess-frame-support = { version = "4.0.0-dev", default-features = false, path = "../support" }
cess-frame-system = { version = "4.0.0-dev", default-features = false, path = "../system" }
pallet-treasury = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-10' }
cessp-io = { version = "4.0.0-dev", path = "../../primitives/io", default-features = false }
cessp-core = { version = "4.0.0-dev", path = "../../primitives/core", default-features = false }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-10', optional = true }
log = { version = "0.4.14", default-features = false }

[dev-dependencies]
pallet-balances = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-10' }

[features]
default = ["std"]
std = [
	"codec/std",
	"cessp-core/std",
	"cessp-io/std",
	"scale-info/std",
	"cessp-std/std",
	"cessp-runtime/std",
	"cess-frame-support/std",
	"cess-frame-system/std",
	"pallet-treasury/std",
	"log/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"cess-frame-support/runtime-benchmarks",
	"cess-frame-system/runtime-benchmarks",
]
try-runtime = ["cess-frame-support/try-runtime"]
