[package]
name = "cess-frame-support"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "Support code for the runtime."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.126", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
frame-metadata = { version = "14.0.0", default-features = false, features = ["v14"] }
cessp-std = { version = "4.0.0-dev", default-features = false, path = "../../primitives/std" }
cessp-io = { version = "4.0.0-dev", default-features = false, path = "../../primitives/io" }
cessp-runtime = { version = "4.0.0-dev", default-features = false, path = "../../primitives/runtime" }
cessp-tracing = { version = "4.0.0-dev", default-features = false, path = "../../primitives/tracing" }
cessp-core = { version = "4.0.0-dev", default-features = false, path = "../../primitives/core" }
cessp-arithmetic = { version = "4.0.0-dev", default-features = false, path = "../../primitives/arithmetic" }
cessp-inherents = { version = "4.0.0-dev", default-features = false, path = "../../primitives/inherents" }
cessp-staking = { version = "4.0.0-dev", default-features = false, path = "../../primitives/staking" }
frame-support-procedural = { version = "4.0.0-dev", default-features = false, path = "./procedural" }
paste = "1.0"
once_cell = { version = "1", default-features = false, optional = true }
cessp-state-machine = { version = "0.10.0-dev", optional = true, path = "../../primitives/state-machine" }
bitflags = "1.3"
impl-trait-for-tuples = "0.2.1"
smallvec = "1.7.0"
log = { version = "0.4.14", default-features = false }

[dev-dependencies]
assert_matches = "1.3.0"
pretty_assertions = "0.6.1"
cess-frame-system = { version = "4.0.0-dev", path = "../system" }
parity-util-mem = { version = "0.10.0", default-features = false, features = ["primitive-types"] }

[features]
default = ["std"]
std = [
	"once_cell",
	"serde",
	"cessp-io/std",
	"codec/std",
	"scale-info/std",
	"cessp-std/std",
	"cessp-runtime/std",
	"cessp-tracing/std",
	"cessp-arithmetic/std",
	"frame-metadata/std",
	"cessp-inherents/std",
	"cessp-staking/std",
	"cessp-state-machine",
	"frame-support-procedural/std",
	"log/std",
]
runtime-benchmarks = []
try-runtime = []
