[package]
name = "cessp-application-crypto"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Provides facilities for generating application specific crypto wrapper types."
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
documentation = "https://docs.rs/sp-application-crypto"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies]
cessp-core = { version = "4.0.0-dev", default-features = false, path = "../core" }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.126", optional = true, features = ["derive"] }
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-10'  }
cessp-io = { version = "4.0.0-dev", default-features = false, path = "../io" }

[features]
default = [ "std" ]
std = [
	"full_crypto",
	"cessp-core/std",
	"codec/std",
	"scale-info/std",
	"serde",
	"sp-std/std",
	"cessp-io/std",
]

# This feature enables all crypto primitives for `no_std` builds like microcontrollers
# or Intel SGX.
# For the regular wasm runtime builds this should not be used.
full_crypto = [
	"cessp-core/full_crypto",
	# Don't add `panic_handler` and `alloc_error_handler` since they are expected to be provided
	# by the user anyway.
	"cessp-io/disable_panic_handler",
	"cessp-io/disable_oom",
]
