[package]
name = "cessp-io"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "I/O for Substrate runtimes"
documentation = "https://docs.rs/sp-io"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
hash-db = { version = "0.15.2", default-features = false }
cessp-core = { version = "4.0.0-dev", default-features = false, path = "../core" }
cessp-keystore = { version = "0.10.0-dev", default-features = false, optional = true, path = "../keystore" }
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-10'  }
libsecp256k1 = { version = "0.6", optional = true }
sp-state-machine = { version = "0.10.0-dev", optional = true, git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-10'  }
sp-wasm-interface = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-10', default-features = false }
cessp-runtime-interface = { version = "4.0.0-dev", default-features = false, path = "../runtime-interface" }
sp-trie = { version = "4.0.0-dev", optional = true, git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-10' }
cessp-externalities = { version = "0.10.0-dev", optional = true, path = "../externalities" }
sp-tracing = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-10' }
log = { version = "0.4.8", optional = true }
futures = { version = "0.3.1", features = ["thread-pool"], optional = true }
parking_lot = { version = "0.11.1", optional = true }
tracing = { version = "0.1.25", default-features = false }
tracing-core = { version = "0.1.17", default-features = false}

[features]
default = ["std"]
std = [
	"cessp-core/std",
	"cessp-keystore",
	"codec/std",
	"sp-std/std",
	"hash-db/std",
	"sp-trie",
	"sp-state-machine",
	"libsecp256k1",
	"cessp-runtime-interface/std",
	"cessp-externalities",
	"sp-wasm-interface/std",
	"sp-tracing/std",
	"tracing/std",
	"tracing-core/std",
	"log",
	"futures",
	"parking_lot",
]

with-tracing = [
	"sp-tracing/with-tracing"
]

# These two features are used for `no_std` builds for the environments which already provides
# `#[panic_handler]`, `#[alloc_error_handler]` and `#[global_allocator]`.
#
# For the regular wasm runtime builds those are not used.
disable_panic_handler = []
disable_oom = []
disable_allocator = []
