[package]
name = "cessp-runtime"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "Runtime Modules shared primitive types."
documentation = "https://docs.rs/sp-runtime"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies]
serde = { version = "1.0.126", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
cessp-core = { version = "4.0.0-dev", default-features = false, path = "../core" }
cessp-application-crypto = { version = "4.0.0-dev", default-features = false, path = "../application-crypto" }
cessp-arithmetic = { version = "4.0.0-dev", default-features = false, path = "../arithmetic" }
cessp-std = { version = "4.0.0-dev", default-features = false, path = "../std" }
cessp-io = { version = "4.0.0-dev", default-features = false, path = "../io" }
log = { version = "0.4.14", default-features = false }
paste = "1.0"
rand = { version = "0.7.2", optional = true }
impl-trait-for-tuples = "0.2.1"
parity-util-mem = { version = "0.10.0", default-features = false, features = ["primitive-types"] }
hash256-std-hasher = { version = "0.15.2", default-features = false }
either = { version = "1.5", default-features = false }

[dev-dependencies]
serde_json = "1.0.68"
rand = "0.7.2"
cessp-state-machine = { version = "0.10.0-dev", path = "../state-machine" }
sp-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-10' }
cess-substrate-test-runtime-client = { version = "2.0.0", path = "../../test-utils/runtime/client" }
cessp-tracing = { version = "4.0.0-dev", path = "../tracing" }

[features]
bench = []
runtime-benchmarks = []
default = ["std"]
std = [
	"cessp-application-crypto/std",
	"cessp-arithmetic/std",
	"codec/std",
	"scale-info/std",
	"log/std",
	"cessp-core/std",
	"rand",
	"cessp-std/std",
	"cessp-io/std",
	"serde",
	"parity-util-mem/std",
	"hash256-std-hasher/std",
	"either/use_std",
]
