[package]
name = "frame-support-test"
version = "3.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
publish = false
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.126", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
cessp-arithmetic = { version = "4.0.0-dev", default-features = false, path = "../../../primitives/arithmetic" }
cessp-io = { version = "4.0.0-dev", path = "../../../primitives/io", default-features = false }
sp-state-machine = { version = "0.10.0-dev", optional = true, path = "../../../primitives/state-machine" }
cess-frame-support = { version = "4.0.0-dev", default-features = false, path = "../" }
cessp-runtime = { version = "4.0.0-dev", default-features = false, path = "../../../primitives/runtime" }
cessp-core = { version = "4.0.0-dev", default-features = false, path = "../../../primitives/core" }
cessp-std = { version = "4.0.0-dev", default-features = false, path = "../../../primitives/std" }
cessp-version = { version = "4.0.0-dev", default-features = false, path = "../../../primitives/version" }
trybuild = "1.0.43"
pretty_assertions = "0.6.1"
rustversion = "1.0.0"
cess-frame-system = { version = "4.0.0-dev", default-features = false, path = "../../system" }
# The "std" feature for this pallet is never activated on purpose, in order to test construct_runtime error message
test-pallet = { package = "cess-frame-support-test-pallet", default-features = false, path = "pallet" }

[features]
default = ["std"]
std = [
	"serde/std",
	"codec/std",
	"scale-info/std",
	"cessp-io/std",
	"cess-frame-support/std",
	"cess-frame-system/std",
	"cessp-core/std",
	"cessp-std/std",
	"cessp-runtime/std",
	"sp-state-machine",
]
try-runtime = ["cess-frame-support/try-runtime"]
# WARNING: CI only execute pallet test with this feature,
# if the feature intended to be used outside, CI and this message need to be updated.
conditional-storage = []
# Disable ui tests
disable-ui-tests = []
