[package]
name = "cess-frame-system-benchmarking"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME System benchmarking"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
cessp-std = { version = "4.0.0-dev", default-features = false, path = "../../../primitives/std" }
cessp-runtime = { version = "4.0.0-dev", default-features = false, path = "../../../primitives/runtime" }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, path = "../../benchmarking" }
cess-frame-system = { version = "4.0.0-dev", default-features = false, path = "../../system" }
cess-frame-support = { version = "4.0.0-dev", default-features = false, path = "../../support" }
cessp-core = { version = "4.0.0-dev", default-features = false, path = "../../../primitives/core" }

[dev-dependencies]
cessp-io = { version = "4.0.0-dev", path = "../../../primitives/io" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"cessp-runtime/std",
	"cessp-std/std",
	"frame-benchmarking/std",
	"cess-frame-system/std",
	"cess-frame-support/std",
	"cessp-core/std",
]
