[package]
name = "cessp-application-crypto-test"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Integration tests for application-crypto"
license = "Apache-2.0"
publish = false
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cessp-core = { version = "4.0.0-dev", default-features = false, path = "../../core" }
sp-keystore = { version = "0.10.0-dev", path = "../../keystore", default-features = false }
cess-substrate-test-runtime-client = { version = "2.0.0", path = "../../../test-utils/runtime/client" }
cessp-runtime = { version = "4.0.0-dev", path = "../../runtime" }
sp-api = { version = "4.0.0-dev", path = "../../api" }
cessp-application-crypto = { version = "4.0.0-dev", path = "../" }
